--- a/app/walkandplay/trunk/client/web/newaccount.html
+++ b/app/walkandplay/trunk/client/web/newaccount.html
@@ -11,7 +11,8 @@
 <!--
 <script src="http://maps.google.com/maps?file=api&amp;v=2.48&amp;key=ABQIAAAAAnsKeh1eS56d4nSCvWmbcBSurnAizDIuQPYrT1jN4yvuBVLWkhT_FD84oCbtAcZNS3" type="text/javascript"></script>
 -->
-<script src="http://maps.google.com/maps?file=api&amp;v=2.48&amp;key=ABQIAAAAgbRczGdUGFScFxOsmC_JghQHBvw4Dj8Sg5rQsz5g3RvuAbjMvRQzK0V9mdSgW9mk-dHwn7fbIh-5yA" type="text/javascript"></script><script type="text/javascript" src="lib/DHTML.js"></script>
+<script src="http://maps.google.com/maps?file=api&amp;v=2.48&amp;key=ABQIAAAAgbRczGdUGFScFxOsmC_JghQHBvw4Dj8Sg5rQsz5g3RvuAbjMvRQzK0V9mdSgW9mk-dHwn7fbIh-5yA" type="text/javascript"></script>
+<script type="text/javascript" src="lib/DHTML.js"></script>
 <script type="text/javascript" src="lib/GTApp.js"></script>
 <script type="text/javascript" src="lib/KWClient.js"></script>
 <link rel="stylesheet" href="css/geotracingfs.css" />
@@ -71,9 +72,7 @@
             <input type="text" class="medium" size="38" name="phone"/>
           </li>
         </ul>
-        <iframe src="imageUpload.php" style="position:absolute; top:0px; left:400px; list-style:none; border:0px;" allowtransparency="true" scrolling="no">
-		
-		</iframe>
+        <iframe id="uploadFrame" style="display:none;"> </iframe>
         &nbsp; </div>
       <div id="tab_2" style="display:none;">
         <ul style="list-style:none;">
@@ -81,7 +80,7 @@
           <li>
             <input type="text" size="100" class="large" name="firstname"/>
           </li>
-		  <li> last name:</li>
+          <li> last name:</li>
           <li>
             <input type="text" size="100" class="large" name="lastname"/>
           </li>
@@ -92,7 +91,7 @@
           <li> housenumber:</li>
           <li>
             <input type="text"  size="100" class="large" name="streetnr"/>
-          </li>		  
+          </li>
           <li> postal code:</li>
           <li>
             <input type="text"  size="100" class="large" name="zip"/>
@@ -124,41 +123,107 @@
         </ul>
         &nbsp; </div>
       <div id="tab_3" style="display:none;">
-	  <ul style="list-style:none;">
-        <li> 1. Mogen derden gebruik maken van uw werk voor commerci&euml;le doeleinden? (meer informatie more information)</li>
-		<li>
-          <label>
-          <input type="radio" name="cc1" value="yes" checked/>
-          Ja</label>
-          <br />
-          <label>
-          <input type="radio" name="cc1" value="no" />
-          Nee</label>
-        </li>
-		<li> <br />
-<br />
-2. Mogen derden uw werk bewerken? (meer informatie more information)</li>
-		<li>
-          <label>
-          <input type="radio" name="cc2" value="yes" checked/>
-          Ja</label>
-          <br />
-		   <label>
-          <input type="radio" name="cc2" value="though" />
-          Ja, zolang derden ook gelijk delen (meer informatie more information)</label>
-          <br />
-          <label>
-          <input type="radio" name="cc2" value="no" />
-          Nee</label>
-        </li>
-		<li>
-			<div><br /><br />
-          		<button type="submit">submit</button>
-			</div>	
-        </li>
-		</ul>
+        <ul style="list-style:none;">
+          <li> 1. Mogen derden gebruik maken van uw werk voor commerci&euml;le doeleinden? (meer informatie more information)</li>
+          <li>
+            <label>
+            <input type="radio" name="cc1" value="yes" checked/>
+            Ja</label>
+            <br />
+            <label>
+            <input type="radio" name="cc1" value="no" />
+            Nee</label>
+          </li>
+          <li> <br />
+            <br />
+            2. Mogen derden uw werk bewerken? (meer informatie more information)</li>
+          <li>
+            <label>
+            <input type="radio" name="cc2" value="yes" checked/>
+            Ja</label>
+            <br />
+            <label>
+            <input type="radio" name="cc2" value="though" />
+            Ja, zolang derden ook gelijk delen (meer informatie more information)</label>
+            <br />
+            <label>
+            <input type="radio" name="cc2" value="no" />
+            Nee</label>
+          </li>
+          <li>
+            <div><br />
+              <br />
+              <button type="submit">submit</button>
+            </div>
+          </li>
+        </ul>
         &nbsp;</div>
     </form>
+		<form id="addmediumform" name="addmediumform" enctype="multipart/form-data" target="uploadFrame" method="post" action="wp/media.srv" >
+<table>
+	<tr>
+		<td>name *</td><td><input name="name" id="name" type="text" /></td>
+	</tr>
+	<tr>
+		<td>description</td><td><input name="description" id="description" type="text"  /></td>
+	</tr>
+	<tr>
+		<td>file</td><td>
+		<input name="file" id="file" type="file"  />
+		<input name="agentkey" id="agentkey" type="hidden" value="null" />
+		<input name="xmlrsp" id="xmlrsp" type="hidden" value="true" />
+	</td>
+	</tr>
+	   <tr>
+	<td colspan="2">
+		<a href="#" onclick="return addMedium();">[Add Medium]</a>
+	</td>
+	</tr>
+	</table>
+</form>
+<script>
+function addMedium () {
+		alert(KW.agentKey);
+		document.addmediumform.agentkey.value = KW.agentKey;
+		document.addmediumform.submit();
+		_checkIFrameRsp();
+		//var form = DH.getElementById('addmediumform');
+		//form.agentkey.value = KW.agentKey;
+		// form.submit();
+		// WT.pr('add Medium sent name=' + name);
+		return false;
+	}
+	 function _checkIFrameRsp() {
+		var iframe = DH.getObject('uploadFrame');
+		if (!iframe) {
+			WT.pr('cannot get uploadFrame');
+			return;
+		}
+
+		var iframeDoc = null;
+
+		if (iframe.contentDocument) {
+			// For NS6
+			iframeDoc = iframe.contentDocument;
+		} else if (iframe.contentWindow) {
+			// For IE5.5 and IE6
+			iframeDoc = iframe.contentWindow.document;
+		} else if (iframe.document) {
+			// For IE5
+			iframeDoc = iframe.document;
+		}
+		alert(iframeDoc);
+		if (iframeDoc == null) {
+			setTimeout('WT._checkIFrameRsp()', 2000);
+		} else {
+			// WT.onRsp(iframeDoc.documentElement);
+			alert(iframeDoc.documentElement.innerHTML);
+						setTimeout('WT._checkIFrameRsp()', 2000);
+
+		}
+	}	
+</script>
+
   </div>
   <b class="rbottom"><b class="r4"></b><b class="r3"></b><b class="r2"></b><b class="r1"></b></b> </div>
 <!-- / CONTENT -->
